# Cookiecutter_Templates

./: CLAUDE.md  README.md
Cookiecutter_uv_python/: cookiecutter.json
Cookiecutter_uv_python/hooks/: post_gen_project.py
Cookiecutter_uv_python/{{ cookiecutter.project_slug }}/: pyproject.toml
